# rust-jsonrpc

./: Cargo.toml
src/: client.rs  error.rs  lib.rs  simple_http.rs
src/http/: minreq_http.rs  simple_http.rs
