[package]
name = "jsonrpc-async"
version = "2.0.1"
authors = ["Jeremy Rubin <j@rubin.io>", "Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/jeremyrubin/rust-jsonrpc-async/"
repository = "https://github.com/jeremyrubin/rust-jsonrpc-async/"
documentation = "https://docs.rs/jsonrpc-async/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc", "asynchronous" ]
readme	 = "README.md"
edition="2018"

[lib]
name = "jsonrpc_async"
path = "src/lib.rs"

[features]
default = [ "simple_http" ]
# A bare-minimum HTTP transport.
simple_http = [ "base64-compat" ]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = [ "raw_value" ] }

base64-compat = { version = "1.0.0", optional = true }
async-trait = "0.1.42"

tokio = { version = "1", features = ["full"] }
