[package]
name = "jsonrpc-async"
version = "2.0.2"
authors = [
    "Jeremy Rubin <j@rubin.io>",
    "Andrew Poelstra <apoelstra@wpsoftware.net>",
]
license = "CC0-1.0"
homepage = "https://github.com/jeremyrubin/rust-jsonrpc-async/"
repository = "https://github.com/jeremyrubin/rust-jsonrpc-async/"
documentation = "https://docs.rs/jsonrpc-async/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = ["protocol", "json", "http", "jsonrpc", "asynchronous"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
edition = "2018"

[lib]
name = "jsonrpc_async"
path = "src/lib.rs"

[features]
default = ["simple_http", "simple_tcp"]
# A bare-minimum HTTP transport.
simple_http = ["base64"]
# A transport that uses `minreq` as the HTTP client.
minreq_http = ["base64", "minreq"]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []
# Enable Socks5 Proxy in transport
proxy = ["socks"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

base64 = { version = "0.13.0", optional = true }
minreq = { version = "2.7.0", features = ["json-using-serde"], optional = true }
socks = { version = "0.3.4", optional = true }
base64-compat = { version = "1.0.0", optional = true }
async-trait = "0.1.42"

tokio = { version = "1", features = ["full"] }
[workspace]
members = ["fuzz", "integration_test"]
