[package]
edition = "2021"
name = "jsonrpc-async"
version = "2.0.2"

[features]
default = ["simple_http", "simple_tcp"]
# A bare-minimum HTTP transport.
simple_http = ["base64"]
# A transport that uses `minreq` as the HTTP client.
minreq_http = ["base64", "minreq"]
# Basic transport over a raw TcpListener
simple_tcp = []
# Basic transport over a raw UnixStream
simple_uds = []
# Enable Socks5 Proxy in transport
proxy = ["socks"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

base64 = { version = "0.13.0", optional = true }
minreq = { version = "2.7.0", features = ["json-using-serde"], optional = true }
socks = { version = "0.3.4", optional = true }
base64-compat = { version = "1.0.0", optional = true }
async-trait = "0.1.42"

tokio = { version = "1.37.0", features = ["full"] }
